--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Form Maker/Profile</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Form Maker-Forms</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/dashboard.css" rel="stylesheet"/>
 </head>
 <body>
-<div id="head" class="container">
-    <div class="row">
-        <div class="col-xs-9">
-            <h1> Form Maker </h1>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Form Maker</a>
         </div>
-        <div class="col-xs-1">
-            <h5><a href='username.html'>Username</a></h5>
-        </div>
-        <div class="col-xs-1">
-            <h5><a href='logout.html'>Logout</a></h5>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="register.html">Register</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="username.html">Username</a></li>
+                <li><a href="logout.html">Logout</a></li>
+            </ul>
         </div>
     </div>
-</div>
-
-<div id="intro" class="container">
-    <div class="row">
-        <div class="col-xs-1">
-            <h5><a class="btn btn-block" href='home.html'>Home</a></h5>
-            <h5><a class="btn btn-block" href='profile.html'>Profile</a></h5>
-            <h5><a class="btn btn-block" href='admin.html'>Admin</a></h5>
-            <h5><a class="btn btn-primary btn-block active" href='forms.html'>Forms</a></h5>
-        </div>
-        <div class="col-xs-11">
-            <h2>Forms</h2>
+</nav>
+div class="container-fluid">
+<div class="row">
+    <div class="col-sm-3 col-md-2 sidebar">
+        <ul class="nav nav-sidebar">
+            <li><a href='home.html'>Home</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="admin.html">Admin</a></li>
+            <li class ="active"><a href="#">Forms<span class="sr-only">(current)</span></a></li>
+        </ul>
+    </div>
+    <div class="container-fluid">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <h1 class="page-header">Forms</h1>
         </div>
     </div>
 </div>
