--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -1,53 +1,57 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Form Maker</title>
-
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/dashboard.css" rel="stylesheet"/>
 </head>
 <body>
-<div id="head" class="container">
-    <div class="row">
-        <div class="col-xs-7">
-            <h1> Form Maker </h1>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Form Maker</a>
         </div>
-        <div class="col-xs-1">
-            <h5><a href='register.html'>Register</a></h5>
-        </div>
-        <div class="col-xs-1">
-            <h5><a href='login.html'>Login</a></h5>
-        </div>
-        <div class="col-xs-1">
-            <h5><a href='username.html'>Username</a></h5>
-        </div>
-        <div class="col-xs-1">
-            <h5><a href='logout.html'>Logout</a></h5>
-        </div>
-    </div>
-</div>
-
-<div id="intro" class="container">
-    <div class="row">
-        <div class="col-xs-1">
-            <h5><a class="btn btn-primary btn-block active" href='home.html'>Home</a></h5>
-            <h5><a class="btn btn-block" href='profile.html'>Profile</a></h5>
-            <h5><a class="btn btn-block" href='admin.html'>Admin</a></h5>
-            <h5><a class="btn btn-block" href='forms.html'>Forms</a></h5>
-        </div>
-        <div class="col-xs-11">
-            <h2>Welcome!</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.
-                Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui.
-                Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam.
-                Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit.
-                Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra.
-                Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.
-            </p>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="register.html">Register</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="username.html">Username</a></li>
+                <li><a href="logout.html">Logout</a></li>
+            </ul>
         </div>
     </div>
-</div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+            <ul class="nav nav-sidebar">
+                <li class="active"><a href='#'>Home<span class="sr-only">(current)</span></a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="admin.html">Admin</a></li>
+                <li><a href="forms.html">Forms</a></li>
+            </ul>
+        </div>
+        <div class="container-fluid">
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                <h1 class="page-header">Welcome!</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.
+                    Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui.
+                    Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam.
+                    Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit.
+                    Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra.
+                    Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
