--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -42,8 +42,89 @@
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Admin</h1>
             </div>
+                <div class="container-fluid">
+                    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                        <h2 class="sub-header">Users</h2>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Username
+                                        </th>
+                                        <th>
+                                            <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Password
+                                        </th>
+                                        <th>
+                                            <span class="glyphicon glyphicon-chevron-down" aria-label="sort"></span>  Role
+                                        </th>
+                                        <th>
+                                            Actions
+                                        </th>
+                                    </tr>
+                                 </thead>
+                                <tbody>
+                                     <tr>
+                                         <td>
+                                            <form class="form-horizontal">
+                                             <input id="username" class="form-control" type="text" placeholder="username"/>
+                                            </form>
+                                         </td>
+                                         <td>
+                                             <form class="form-horizontal">
+                                              <input id="password" class="form-control" type="text" placeholder="password"/>
+                                             </form>
+                                         </td>
+                                         <td>
+                                             <form class="form-horizontal">
+                                                 <input id="roles" class="form-control" type="text" placeholder="roles"/>
+                                             </form>
+                                         </td>
+                                         <td>
+                                             <span class="glyphicon glyphicon-plus"></span>
+                                             <span class="glyphicon glyphicon-ok"></span>
+
+                                         </td>
+                                     </tr>
+                                     <tr>
+                                         <td>alice</td>
+                                         <td></td>
+                                         <td>student</td>
+                                         <td>
+                                             <span class="glyphicon glyphicon-remove"></span>
+                                             <span class="glyphicon glyphicon-pencil"></span>
+                                         </td>
+                                     </tr>
+                                     <tr>
+                                         <td>bob</td>
+                                         <td></td>
+                                         <td>faculty |  admin</td>
+                                         <td>
+                                         <span class="glyphicon glyphicon-remove"></span>
+                                         <span class="glyphicon glyphicon-pencil"></span>
+                                         </td>
+                                     </tr>
+                                     <tr>
+                                         <td>charlie</td>
+                                         <td></td>
+                                         <td></td>
+                                         <td>
+                                         <span class="glyphicon glyphicon-remove"></span>
+                                         <span class="glyphicon glyphicon-pencil"></span>
+                                     </td>
+                                     </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
-</div>
+    </div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins)
+==================================================
+Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </body>
 </html>
