--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 </nav>
-div class="container-fluid">
+<div class="container-fluid">
 <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
@@ -42,7 +42,63 @@ div class="container-fluid">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Forms</h1>
         </div>
+        <div class="container-fluid">
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                <ul class="nav nav-tabs nav-justified">
+                    <li role="presentation" class="active"><a href="#">Forms</a></li>
+                    <li role="presentation"><a href="form-fields.html">Fields</a></li>
+                </ul>
+                <table class="table table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th>Form Name</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <form class="form-horizontal">
+                                <input id="name" class="form-control" type="text" placeholder="name" size="5"/>
+                            </form>
+                        </td>
+                        <td>
+                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="glyphicon glyphicon-ok"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Registration Form</td>
+                        <td>
+                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Contact List</td>
+                        <td>
+                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                    <td>To Do List</td>
+                        <td>
+                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </td>
+                    </tr>
+                    </tbody>
+                    </table>
+            </div>
+            </div>
+        </div>
     </div>
 </div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins)
+==================================================
+Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </body>
 </html>
