--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -66,5 +66,10 @@
         </div>
     </div>
 </div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins)
+==================================================
+Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
 </body>
 </html>
