--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -81,5 +81,9 @@ div class="container-fluid">
         </div>
     </div>
 </div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins)
+==================================================
+Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </body>
 </html>
