Form Maker v1.5 Add edit, clone, reorder and remove icons to form pages

--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -50,19 +50,37 @@
                     </ul>
                     <form class="form-horizontal"><br>
                         <div class="form-group">
-                            <label for="firstName">First Name:</label><br>
+                            <label class="col-xs-11" for="firstName">First Name:</label>
+                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                            <span class="glyphicon glyphicon-tasks"></span><br>
                             <input id="firstName" class="form-control" type="text" placeholder="First Name"/>
                         </div>
                         <div class="form-group">
-                            <label for="lasttName">Last Name:</label><br>
+                            <label class="col-xs-11" for="lasttName">Last Name:</label>
+                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                            <span class="glyphicon glyphicon-tasks"></span><br>
                             <input id="lasttName" class="form-control" type="text" placeholder="Last Name"/>
                         </div>
                         <div class="form-group">
-                            <label for="dateOfBirth">Date of Birth:</label><br>
+                            <label class="col-xs-11" for="dateOfBirth">Date of Birth:</label>
+                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                            <span class="glyphicon glyphicon-tasks"></span><br>
                             <input id="dateOfBirth" class="form-control" type="date" placeholder="Select a Date"/>
                         </div>
-                            <label>Gender:</label><br>
-                        <div class="btn btn-group dropdown">
+                        <div class="form-group">
+                            <label class="col-xs-11">Gender :</label>
+                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                            <span class="glyphicon glyphicon-tasks"></span>
+                        </div>
+                        <div class="btn-group dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 Male<span class="caret"></span>
                             </a>
@@ -71,26 +89,42 @@
                             </ul>
                         </div>
                     <div class="form-group">
-                        <div class="checkbox">
-                            <label><h5><b>Roles:</b></h5></label><br>
-                            <label><input type="checkbox">Admin</label><br>
-                            <label><input type="checkbox">Student</label><br>
-                            <label><input type="checkbox">User</label><br>
-                        </div>
+                        <label class="col-xs-11"><h5>Roles:</h5></label><br>
+                        <span class="glyphicon glyphicon-plus"></span>
+                        <span class="glyphicon glyphicon-remove"></span>
+                        <span class="glyphicon glyphicon-pencil"></span>
+                        <span class="glyphicon glyphicon-tasks"></span><br>
+                        <label><input type="checkbox"> Admin</label><br>
+                        <label><input type="checkbox"> Student</label><br>
+                        <label><input type="checkbox"> User</label><br>
                     </div>
                     <div class="form-group">
-                        <label>License Agreement :</label><br>
+                        <label class="col-xs-11">License Agreement :</label><br>
+                        <span class="glyphicon glyphicon-plus"></span>
+                        <span class="glyphicon glyphicon-remove"></span>
+                        <span class="glyphicon glyphicon-pencil"></span>
+                        <span class="glyphicon glyphicon-tasks"></span><br>
                         <label><input type="radio"> Yes</label><br>
                         <label><input type="radio"> No</label><br>
                     </div>
-                    <label> Add New Fields</label><br>
-                    <div class="btn btn-group dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        <div class="form-group">
+                            <label  class="col-xs-11">Add New Fields :</label><br>
+                             <span class="glyphicon glyphicon-plus"></span>
+                             <span class="glyphicon glyphicon-remove"></span>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                            <span class="glyphicon glyphicon-tasks"></span><br>
+                        <div class="btn-group dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                             Single Line Text<span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Female</a></li>
-                        </ul>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Date</a></li>
+                                <li><a href="#">Dropdown</a></li>
+                                <li><a href="#">Checkboxes</a></li>
+                                <li><a href="#">Radio Buttons</a></li>
+                                <li><a href="#">Paragraph Text Fields</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </form>
             </div>
