--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -68,21 +68,21 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Registration Form</td>
+                        <td><a href="form-fields.html">Registration Form</a></td>
                         <td>
                             <span class="glyphicon glyphicon-remove"></span>
                             <span class="glyphicon glyphicon-pencil"></span>
                         </td>
                     </tr>
                     <tr>
-                        <td>Contact List</td>
+                        <td><a href="form-fields.html">Contact List</a></td>
                         <td>
                             <span class="glyphicon glyphicon-remove"></span>
                             <span class="glyphicon glyphicon-pencil"></span>
                         </td>
                     </tr>
                     <tr>
-                    <td>To Do List</td>
+                    <td><a href="form-fields.html">To Do List</a></td>
                         <td>
                             <span class="glyphicon glyphicon-remove"></span>
                             <span class="glyphicon glyphicon-pencil"></span>
