Form Maker v1.6 Modified dropdown by adding select tag Added js required for bootstrap in all pages

--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -22,8 +22,8 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.html">Register</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="username.html">Username</a></li>
-                <li><a href="logout.html">Logout</a></li>
+                <li><a href="profile.html">Username</a></li>
+                <li><a href="home.html">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -126,5 +126,7 @@
 ==================================================
 Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </body>
 </html>
