--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -21,14 +21,14 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.html">Register</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="username.html">Username</a></li>
-                <li><a href="logout.html">Logout</a></li>
+                <li><a href="profile.html">Username</a></li>
+                <li><a href="home.html">Logout</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-div class="container-fluid">
+<div class="container-fluid">
 <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
@@ -75,15 +75,17 @@ div class="container-fluid">
                     </div>
                 </div>
                 <div class="col-xs-2">
-                    <button class="btn btn-block btn-primary" type="button">Register</button>
+                    <button class="btn btn-primary" type="button">Register</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
+</div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins)
 ==================================================
 Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
