--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -20,8 +20,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="username.html">Username</a></li>
-                <li><a href="logout.html">Logout</a></li>
+                <li><a href="profile.html">Username</a></li>
+                <li><a href="home.html">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="col-xs-2">
-                        <button class="btn btn-block btn-primary" type="button">Update</button>
+                        <button class="btn btn-primary" type="button">Update</button>
                     </div>
                 </form>
             </div>
@@ -85,5 +85,7 @@
 ==================================================
 Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </body>
 </html>
