Adding Project POC on index page

--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,8 @@
 <div>
     <a href="experiments/angularjs/movieAdmin/index.html">Experiments</a>
 </div>
+<div>
+    <a href="project/client/index.html">Project POC</a>
+</div>
 </body>
 </html>
