[Assignment 3] Server Side Development

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Welcome!</h1>
 <div>
-    <a href="assignment/index.html">Assignment</a>
+    <a href="assignment/client/index.html">Assignment</a>
 </div>
 <div>
     <a href="https://docs.google.com/document/d/1jWjsUD3KwyS8LgmC9eC-qr9Fd71WY_YX0vhEPy6ONF8/">Project</a>
