--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -22,10 +22,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <!--Angular Route-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular-route.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="services/user.service.client.js"></script>
     <script src="services/forms.service.client.js"></script>
+    <script src="services/fields.service.client.js"></script>
     <!--Controllers-->
     <script src="views/main/main.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
@@ -44,7 +47,6 @@
 <div ng-include="'views/sidebar/sidebar.view.html'"></div>
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <div ng-view></div>
-    <!--<a href="#/home" class="btn btn-primary">Home</a>-->
 </div>
 </body>
 </html>
