Implementing passport JS

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -43,14 +43,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="services/customer.service.client.js"></script>
     <!--Controllers-->
     <script src="views/main/main.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
     <script src="views/users/professional/register.controller.js"></script>
+    <script src="views/users/customer/register.controller.js"></script>
     <script src="views/users/professional/login.controller.js"></script>
-    <script src="views/users/customer/fbLogin.controller.js"></script>
     <script src="views/users/customer/profile.controller.js"></script>
     <!--<script src="views/sidebar/sidebar.controller.js"></script>-->
+
 </head>
 
 <body ng-controller="MainController">
