Customer can Search Youtube videos

--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <title>Welcome!</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Welcome!</h1>
-<div>
-    <a href="assignment/client/index.html">Assignment</a>
-</div>
-<div>
-    <a href="https://docs.google.com/document/d/1jWjsUD3KwyS8LgmC9eC-qr9Fd71WY_YX0vhEPy6ONF8/">Project</a>
-</div>
-<div>
-    <a href="experiments/angularjs/movieAdmin/index.html">Experiments</a>
-</div>
-<div>
-    <a href="project/client/index.html">Project POC</a>
+<div class="container">
+    <h1>Welcome!</h1>
+    <a class="btn btn-primary" role="button" href="assignment/client/index.html">Assignment</a>
+    <a class="btn btn-success" role="button" href="project/client/index.html">Project</a>
+    <a class="btn btn-warning" role="button" href="https://docs.google.com/document/d/1jWjsUD3KwyS8LgmC9eC-qr9Fd71WY_YX0vhEPy6ONF8/">Project Proposal</a>
+    <a class="btn btn-danger" role="button" href="experiments/angularjs/movieAdmin/index.html">Experiments</a>
+    <div style="text-align: right"><h6>-Priyanka Nahar</h6></div>
 </div>
 </body>
 </html>
